test/ll_parser_prefix_command_test.test
*PARSER*:
    trace [+ parser output]
    define selector text
    define typed bracket "{" ... "|" ... "|" ... "}"
        [code, text]
        // no parsing selectors
        with attribute selectors [data]
        with attributes ":" ... "=" ... ","
        with attribute negator "no"
        with attribute flags initiator "["
        with attribute multivalue initiator "{*"
*PARSER*:
    begin block X
    define bracket type "p" [TOP LEVEL]
        with parsing options
             [end at paragraph break, sticky,
              enable table prefix]
        with group paragraph
        with parsing selectors [+ text, - code]
        with implied subprefix {s}
    define bracket type "s" [text]
        with sentence reformatter
            ( , ".", ";", ":", "?", "!" )
    define bracket type "***" [TOP LEVEL, text]
        with group reset
    print bracket type ""
        block X: bracket type "p" [TOP LEVEL]
                 with parsing selectors [- code, + text]
                 with parsing options [end at paragraph break,
                                       enable table prefix, sticky]
                 with group paragraph
                 with implied subprefix {s||s}
        block X: bracket type "s" [text]
                 with sentence reformatter ( , ".", ";", ":", "?", "!" )
        block X: bracket type "***" [TOP LEVEL, text]
                 with group reset
BRACKETED EXPRESSION:
    {p|{s: .terminator = ":"|This is a sentence|s}
       {s: .terminator = "."|an add-on|s}
       {s: .terminator = ";"|A phrase|s}
       {s: .terminator = "?"|and a question|s}|p}
ERROR: in line ##: non-comments after isolated header; ignored:
{***}And an unrecognized line.
     ^^^^^^^^^^^^^^^^^^^^^^^^^
*PARSER*:
    end block X
